reformat and beginning to rewrite with context

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,18 +1,18 @@
 {
-    "appTitle": "Vision Calculator",
-    "chooseFromUnits": "Choose from one of the given units.",
-    "enterVisualAcuity": "Please enter the reader's binocular visual acuity.",
-    "enterCritcalPrintSize": "Please enter the reader's critical print size measured by reading charts. Critical print size refers to the smallest print size that allows one to read at their maximum reading speed.",
-    "hasCentralFieldLoss": "Does the reader have central field loss?",
-    "yes": "Yes",
-    "no": "No",
-    "dontKnow": "Don't Know",
-    "enterFont": "Please select a preferred font.",
-    "enterViewingDistance": "Please enter the preferred viewing distance for reading.",
-    "results": "Results",
-    "calculate": "Calculate",
-    "minDisplayWidth": "To achieve a maximum reading speed, the reader needs a display with a width larger than {{cm}}cm ({{inch}} inch)",
-    "chooseMatchingDisplay": "Please refer to the table below for a list of common displays that meet this requirements, and choose a preferred display.",
-    "usePointSize": "To achieve maximum reading speed on a tablet display, when reading at {{distance}} with {{font}} font, the reader needs to use a print size between {{minPoint}} and {{maxPoint}}.",
-    "clear": "Clear"
+  "appTitle": 'Vision Calculator',
+  "chooseFromUnits": 'Choose from one of the given units.',
+  "enterVisualAcuity": "Please enter the reader's binocular visual acuity.",
+  "enterCritcalPrintSize": "Please enter the reader's critical print size measured by reading charts. Critical print size refers to the smallest print size that allows one to read at their maximum reading speed.",
+  "hasCentralFieldLoss": 'Does the reader have central field loss?',
+  "yes": 'Yes',
+  "no": 'No',
+  "dontKnow": "Don't Know",
+  "enterFont": 'Please select a preferred font.',
+  "enterViewingDistance": 'Please enter the preferred viewing distance for reading.',
+  "results": 'Results',
+  "calculate": 'Calculate',
+  "minDisplayWidth": 'To achieve a maximum reading speed, the reader needs a display with a width larger than {{cm}}cm ({{inch}} inch)',
+  "chooseMatchingDisplay": 'Please refer to the table below for a list of common displays that meet this requirements, and choose a preferred display.',
+  "usePointSize": 'To achieve maximum reading speed on a tablet display, when reading at {{distance}} with {{font}} font, the reader needs to use a print size between {{minPoint}} and {{maxPoint}}.',
+  "clear": 'Clear'
 }
