--- a/content/index-content.mdx
+++ b/content/index-content.mdx
@@ -40,10 +40,10 @@ and Gordon E. Legge with programming by Reuben Gardos Reid, at the
 University Minnesota. The calculations are based in part on published work:
 
 <Reference link='https://doi.org/10.1073/pnas.2007514117'> {/* link is optional, it will be added as a clickable link at the end of the reference */}
-Atilgan, N., Xiong, Y. Z., & Legge, G. E. (2020).
+Atilgan, N.*, Xiong, Y. Z.*, & Legge, G. E. (2020).
 Reconciling print-size and display-size
 constraints on reading. Proceedings of the National
-Academy of Sciences, 117(48), 30276-30284.
+Academy of Sciences, 117(48), 30276-30284.*Equal Contributions.
 </Reference>
 
 <Reference>
