--- a/content/index-content.mdx
+++ b/content/index-content.mdx
@@ -43,13 +43,13 @@ University Minnesota. The calculations are based in part on published work:
 Atilgan, N.*, Xiong, Y. Z.*, & Legge, G. E. (2020).
 Reconciling print-size and display-size
 constraints on reading. Proceedings of the National
-Academy of Sciences, 117(48), 30276-30284.*Equal Contributions.
+Academy of Sciences, 117(48), 30276-30284. *Equal Contributions.
 </Reference>
 
 <Reference>
-Xiong, Y. Z., Atilgan, N., Fletcher D. C.,
+Xiong, Y. Z.*, Atilgan, N.*, Fletcher D. C.,
 & Legge, G. E. (in prep). Principles for Selecting a
-Digital Reading Display for Low Vision
+Digital Reading Display for Low Vision. *Equal Contributions.
 </Reference>
 
 To understand the vision status and reading preferences of our
