--- a/content/background-content.mdx
+++ b/content/background-content.mdx
@@ -50,10 +50,10 @@ diagonal size would be about 20% larger, that is, about 12
 inches for such a display.
 
 <Reference link='https://doi.org/10.1073/pnas.2007514117'>
-Atilgan, N., Xiong, Y. Z., &amp; Legge, G. E. (2020).
+Atilgan, N.*, Xiong, Y. Z.*, &amp; Legge, G. E. (2020).
 Reconciling print-size and display-size
 constraints on reading. Proceedings of the National
-Academy of Sciences, 117(48), 30276-30284.
+Academy of Sciences, 117(48), 30276-30284.(* Equal Contributions)
 </Reference>
 
 Contact information for questions/comments: [lowvis@umn.edu](mailto:lowvis@umn.edu) 
