--- a/content/index-content.mdx
+++ b/content/index-content.mdx
@@ -48,7 +48,7 @@ Academy of Sciences, 117(48), 30276-30284.(* Equal Contributions)
 
 <Reference>
 Xiong, Y. Z.*, Atilgan, N.*, Fletcher D. C.,
-& Legge, G. E. (in prep). Principles for Selecting a
+& Legge, G. E. (Under Review). Principles for Selecting a
 Digital Reading Display for Low Vision.(* Equal Contributions)
 </Reference>
 
