--- a/content/background-content.mdx
+++ b/content/background-content.mdx
@@ -34,7 +34,7 @@ My Reading Display calculates minimum required display width and minimum font
 size based on the requirement of providing at least 13
 characters per line, taking into account viewing distance,
 font preference and visual acuity. This estimate is expected
-to be inclusive of people with a wide range of vision conditions.
+to be inclusive of people with a wide range of vision conditions, covering approximately 70% of individuals with similar visual acuity.
 It may slightly overestimate the display size required for
 some people with low vision.
 
