Fix mdx comment

--- a/content/index-content.mdx
+++ b/content/index-content.mdx
@@ -2,7 +2,7 @@ export const metadata = {
     pageTitle: 'Welcome' // Title that appears on the browser tab
 }
 
-<!-- Note: anything that you write like this is a comment, and won't be diplayed on the site. -->
+{/* Note: anything that you write like this is a comment, and won't be diplayed on the site. */}
 
 # Welcome to *My Reading Display*
 
@@ -39,7 +39,8 @@ My Reading Display was developed by Ying-Zi Xiong, Nilsu Atilgan
 and Gordon E. Legge with programming by Reuben Gardos Reid, at the
 University Minnesota. The calculations are based in part on published work:
 
-<Reference link='https://doi.org/10.1073/pnas.2007514117'> {/* link is optional, it will be added as a clickable link at the end of the reference */}
+<Reference link='https://doi.org/10.1073/pnas.2007514117'>
+{/* link is optional, it will be added as a clickable link at the end of the reference */}
 Atilgan, N.*, Xiong, Y. Z.*, & Legge, G. E. (2020).
 Reconciling print-size and display-size
 constraints on reading. Proceedings of the National
